# stellar-confidential-token-demo

./: .gitignore  DEMO_GUIDE.md  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
contracts/: Cargo.toml
contracts/auditor/: Cargo.toml
contracts/auditor/src/: lib.rs
contracts/token/: Cargo.toml
contracts/token/src/: lib.rs
contracts/verifier/: Cargo.toml
contracts/verifier/src/: lib.rs
media/: demo.cast
scripts/: _shared.ts  build-contracts.sh  build-disclosure.mjs  demo.ts  deploy.ts  e2e-disclosure.ts  e2e.ts  vendor-bb.mjs
