[workspace]
resolver = "2"
members = ["token", "verifier", "auditor"]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"

# The confidential token, access-control, and proc-macro crates are consumed by
# path from a local checkout of OpenZeppelin/stellar-contracts on the
# `feat/confidential-verifier-ultrahonk` branch. They are NOT published, so the
# path below must point at that worktree. Adjust if you cloned it elsewhere.
#
# Transitive deps (soroban-poseidon, stellar-contract-utils, stellar-governance,
# and the pinned `ultrahonk-soroban-verifier` git rev) are resolved through that
# workspace and need not be redeclared here.
# NOTE: `stellar-tokens` pulls in soroban-sdk's `experimental_spec_shaking_v2`
# feature transitively, which is why these contracts MUST be compiled with
# `stellar contract build` (stellar-cli >= 25.2.0), not plain `cargo build`.
# See scripts/build-contracts.sh.
[workspace.dependencies]
soroban-sdk = { version = "26.0.0" }
stellar-access = { path = "../../stellar-contracts-cv-ultrahonk/packages/access" }
stellar-macros = { path = "../../stellar-contracts-cv-ultrahonk/packages/macros" }
stellar-tokens = { path = "../../stellar-contracts-cv-ultrahonk/packages/tokens" }

# Soroban release profile: optimize for wasm code size and determinism.
[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
